--- a/itemsloaderindicator.template.html
+++ b/itemsloaderindicator.template.html
@@ -1,6 +1,7 @@
 <div class="loader">
     <ul>
-      <li ng-repeat="item in narrowIt.items">{{item.name}} {{item.short_name}} {{item.description}}</li>
+      <li ng-repeat="item in narrowIt.items">{{item.name}} {{item.short_name}} {{item.description}}
 <button ng-if="narrowIt.items.length"ng-click="narrowIt.onRemove({index: $index});">Don't want this one!</button>
+</li>
     </ul>
 </div>
